# so-vits-svc-fork

./: .all-contributorsrc  .codespellrc  .copier-answers.yml  .flake8  .gitignore  .gitpod.yml  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_zh_CN.md  commitlint.config.js  commitlint.config.mjs  flake.nix  pyproject.toml  renovate.json  setup.py  so-vits-svc-fork-4.0.ipynb
.github/: CODE_OF_CONDUCT.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  labels.toml
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  1-bug_report.md  1-bug_report.yml  2-feature-request.md  2-feature-request.yml  config.yml
.github/workflows/: ci.yml  hacktoberfest.yml  issue-manager.yml  labels.yml  poetry-upgrade.yml  upgrader.yml
docs/: Makefile  changelog.md  conf.py  contributing.md  index.md  installation.md  usage.md
easy-installation/: install-cn.bat  install.bat
notebooks/: so-vits-svc-fork-4.0.ipynb  so_vits_svc_fork_4_0.ipynb
src/so_vits_svc_fork/: __init__.py  __main__.py  app.py  data_utils.py  dataset.py  default_gui_presets.json  f0.py  gui.py  guicn.py  hparams.py  inference_main.py  logger.py  main.py  models.py  onnx_export.py  preprocess.py  preprocess_flist_config.py  preprocess_hubert_f0.py  preprocess_resample.py  preprocess_speaker_diarization.py  preprocess_split.py  preprocess_utils.py  resample.py  spec_gen.py  train.py  utils.py  wav_upload.py
src/so_vits_svc_fork/cluster/: __init__.py  train_cluster.py
src/so_vits_svc_fork/configs_template/: config_template.json
src/so_vits_svc_fork/hubert/: hubert_model.py  hubert_model_onnx.py
src/so_vits_svc_fork/inference/: core.py  infer_tool.py  infer_tool_grad.py  inference_main.py  main.py  slicer.py
src/so_vits_svc_fork/modules/: attentions.py  commons.py  descriminators.py  encoders.py  flows.py  generator.py  losses.py  mel_processing.py  modules.py  synthesizers.py
src/so_vits_svc_fork/modules/decoders/: f0.py
src/so_vits_svc_fork/modules/decoders/bigvgan/: __init__.py  _activations.py  _models.py  _utils.py
src/so_vits_svc_fork/modules/decoders/hifigan/: __init__.py  _models.py  _utils.py
src/so_vits_svc_fork/modules/decoders/mb_istft/: __init__.py  _generators.py  _loss.py  _pqmf.py  _stft.py  _stft_loss.py
src/so_vits_svc_fork/modules/decoders/pc_ddsp/: __init__.py  _core.py  _loss.py  _pcmer.py  _unit2control.py  _vocoder.py
src/so_vits_svc_fork/modules/onnx/: __init__.py  _export.py  _model.py  onnx_export.py
src/so_vits_svc_fork/onnxexport/: model_onnx.py
src/so_vits_svc_fork/preprocessing/: preprocess_classify.py  preprocess_flist_config.py  preprocess_hubert_f0.py  preprocess_resample.py  preprocess_speaker_diarization.py  preprocess_split.py  tempCodeRunnerFile.py
src/so_vits_svc_fork/preprocessing/config_templates/: quickvc.json  so-vits-svc-4.0v1-legacy.json  so-vits-svc-4.0v1.json
src/so_vits_svc_fork/preprocessing/configs_template/: config_template.json
src/so_vits_svc_fork/vdecoder/hifigan/: env.py  models.py  nvSTFT.py  utils.py
src/so_vits_svc_fork/vdecoder/mb_istft/: generators.py  loss.py  pqmf.py  stft.py  stft_loss.py
templates/: CHANGELOG.md.j2
tests/: test_config_templates.py  test_main.py
wiki/: Home.md  _Sidebar.md
wiki/locate/en-US/: Home-en-US.md  Installation-en-US.md  Usage-en-US.md  _Sidebar.md
wiki/locate/zh-CN/: Home-zh-CN.md  Installation-zh-CN.md  Usage-zh-CN.md  Usage-zn-CN.md  _Sidebar.md
